--- a/index.html
+++ b/index.html
@@ -4,11 +4,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" href="style.css">
+    <title>Bermet Usubalieva</title>
 </head>
 
 <body>
-
+    <img src="img/IMG_9757.jpeg" alt="photo">
 </body>
 
 </html>
