--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
 </head>
 
 <body>
-    <img src="img/IMG_9757.jpeg" alt="photo">
+    <div class="photo-box">
+        <img class="photo-box__img" src="img/CV-photo.jpg" alt="photo">
+    </div>
 </body>
 
 </html>
