--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 <body>
     <div class="photo-box">
-        <img class="photo-box__img" src="img/CV-photo.jpg" alt="photo">
+        <img class="photo-box__img" src="assets/img/CV-photo.jpg" alt="photo">
     </div>
 </body>
 
