add new ptoject RS

--- a/index.html
+++ b/index.html
@@ -77,10 +77,9 @@
                     <h2 class="skills__title">Skills</h2>
                     <ul>
                         <li>HTML</li>
-                        <li>CSS (Bootstrap, SASS/SCSS, BEM)</li>
+                        <li>CSS</li>
                         <li>JS (beginner)</li>
                         <li>React JS (beginner)</li>
-                        <li>Bootstrap</li>
                         <li>Github</li>
                         <li>Figma/Photoshop (for web development)</li>
                         <li>VSCode</li>
@@ -130,8 +129,7 @@ console.log(`Total income: ${total} `);
                             <a href="http://fe.it-academy.by/Sites/0030405/home/geek/index.html">Shop (in progress)</a>
                         </li>
                         <li>
-                            <a href="http://fe.it-academy.by/Sites/0030405/home/lesson_8c/index.html">My first landing
-                                page</a>
+                            <a href="https://github.com/bermet-usubalieva/rs-stage-0"> RS School project</a>
                         </li>
                     </ul>
                 </section>
@@ -145,6 +143,10 @@ console.log(`Total income: ${total} `);
                         </li>
                         <li>Geekbrains
                             Faculty of Web Development (in progress)
+                        </li>
+                        <li>RS School
+                            «JavaScript/Front-end»
+                            Stage 0 (in progress)
                         </li>
                     </ul>
                 </section>
